changed background image

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("http://3.bp.blogspot.com/-kuJBmvq86OU/Tn9o5vCObNI/AAAAAAAAAP8/HR6z8wN3t_4/s1600/light+color+wallpaper+3.jpg");
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRot7K84RXT1HKvKuZvhQcomPJNlRDIcMo8lda-Ba76-wt4n1L4GQ");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -48,7 +48,7 @@ margin: 50px;
 }
 
 #hold {
-    margin-left: 35px;
+    margin-left: 45px;
     margin-top: 50px;
 }
 .content{
